--- a/doc/Abschlussarbeit.tex
+++ b/doc/Abschlussarbeit.tex
@@ -23,6 +23,7 @@
 \usepackage{prettyref}
 \usepackage{enumitem}
 \usepackage{bold-extra}
+\usepackage{ragged2e}
 \usepackage{hyperref}
 
 % --------------- Klickbare Links --------------------------
@@ -85,7 +86,8 @@
 \input{tableofcontents}
 \newpage
 
-\input{vorwort}
+\input{einleitung}
+\input{projektplanung}
 \input{projektanalyse}
 \input{konzept}
 \input{implementierung}
