--- a/doc/implementierung.tex
+++ b/doc/implementierung.tex
@@ -1,5 +1,5 @@
 \section{Implementierung}
-Im Nachfolgenden werden die verschiedenen Klassen und Interfaces erläutert, die im Zuge der Remote-Logger-Implementierung erarbeitet wurden. Ebenso werden deren Beziehungen untereinander aufgezeigt.
+Im Nachfolgenden wird anhand der 
 
 \input{implementierung_allgemein}
 \newpage
