--- a/doc/titlepage.tex
+++ b/doc/titlepage.tex
@@ -19,6 +19,8 @@ Projektverantwortlicher: & Robert Loipfinger\\
 
 \textbf{Prüfungsbewerber:}\\
 Korbinian Mifka\\
+Pelzgartenstraße 12\\
+84175 Johannesbrunn\\
 
 \vfill
 
@@ -29,12 +31,11 @@ Konrad Zuse Str. 4\\
 84144 Geisenhausen\\[5em]
 \end{center}
 
+\vfill
 \small
 \noindent
 Dieses Werk einschließlich seiner Teile ist \textbf{urheberrechtlich geschützt}.
 Jede Verwertung außerhalb der engen Grenzen des Urheberrechtgesetzes ist ohne
-Zustimmung des Autors unzulässig und strafbar. Das gilt insbesondere für
-Vervielfältigungen, Übersetzungen, Mikroverfilmungen sowie die Einspeicherung
-und Verarbeitung in elektronischen Systemen.
+Zustimmung des Autors unzulässig und strafbar.
 
 \end{titlepage}
