--- a/doc/Abschlussarbeit.tex
+++ b/doc/Abschlussarbeit.tex
@@ -24,6 +24,9 @@
 \usepackage{enumitem}
 \usepackage{bold-extra}
 \usepackage{ragged2e}
+\usepackage{pstricks}
+\usepackage{pifont}
+\usepackage[abs]{overpic}
 \usepackage{hyperref}
 
 % --------------- Klickbare Links --------------------------
@@ -89,7 +92,7 @@
 \input{einleitung}
 \input{projektplanung}
 \input{projektanalyse}
-\input{konzept}
+\input{entwurfsphase}
 \input{implementierung}
 \input{test_junit}
 \input{fazit}
