--- a/doc/Abschlussarbeit.tex
+++ b/doc/Abschlussarbeit.tex
@@ -76,7 +76,7 @@
 \fancyhf{}
 
 \fancyhead[L]{\textbf{\textsc{Shortcut-Editor}} \\ Implementierung eines Editors zur Bearbeitung von Tastaturkürzeln}
-\fancyhead[R]{\vspace{-5mm}\includegraphics[height=0.045\textheight]{../img/ADITO_Logo}}
+\fancyhead[R]{\vspace{-5mm}\includegraphics[height=0.045\textheight]{../graphic/images/logo/Logo}}
 \fancyfoot[LE,RO]{\thepage}
 \fancyfoot[LO,RE]{\copyright\ Korbinian Mifka}
 
