--- a/doc/projektanalyse.tex
+++ b/doc/projektanalyse.tex
@@ -3,7 +3,7 @@
 \begin{wrapfigure}[8]{r}[0cm]{180px}
 	\vspace{-12px}
 	\centering
-	\includegraphics[width=120px]{../img/Alter-Editor.PNG}
+	\includegraphics[width=120px]{../graphic/images/screenshots/Alter-Editor}
 	\caption{Bestehender Editor}
 	\label{fig:existEditor}
 \end{wrapfigure}
@@ -20,7 +20,7 @@ Der neue Editor muss ebenfalls die Eingabe aber auch die Bearbeitung (z.B. Entfe
 
 Um eine grobe Übersicht über alle Anwendungsfälle zu erhalten, die von dem umzusetzenden Editor
 abgedeckt werden sollen, wurde im Laufe der Analysephase ein Use-Case-Diagramm erstellt. Dieses
-Diagramm befindet sich im Anhang (XXX) auf S.(X).
+Diagramm befindet sich im Anhang \autoref{fig:anwendungsfall} auf \autopageref{fig:anwendungsfall}.
 
 \subsection{\glqq Make or Buy\grqq -Entscheidung}
 Die Entscheidung, ob der Editor selber erstellt oder gekauft werden soll, lässt sich einfach treffen. Sucht man auf dem Markt nach Softwareteilen, welche den Anforderungen dieses Projekts genüge tun, so findet man nichts entsprechendes. Darum ist man gewissermaßen gezwungen den Editor selbst zu erstellen.
