--- a/doc/titlepage.tex
+++ b/doc/titlepage.tex
@@ -1,7 +1,7 @@
 \begin{titlepage}
 
 \begin{center}
-\includegraphics[scale=0.25]{../img/LogoIHK.pdf}\\[1ex]
+\includegraphics[scale=0.25]{../graphic/images/logo/LogoIHK}\\[1ex]
 \Large{Abschlussprüfung Sommer 2018}\\[3ex]
 
 \Large{Fachinformatiker für Anwendungsentwicklung}\\
@@ -24,7 +24,7 @@ Pelzgartenstraße 12\\
 
 \vfill
 
-\includegraphics[scale=0.7]{../img/ADITO_Logo}\\[2ex]
+\includegraphics[scale=0.7]{../graphic/images/logo/ADITO_Logo}\\[2ex]
 \textbf{Ausbildungsbetrieb:}\\
 ADITO Software GmbH\\
 Konrad Zuse Str. 4\\
