--- a/doc/anhang.tex
+++ b/doc/anhang.tex
@@ -7,7 +7,7 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\linewidth]{../graphic/diagrams/UC_Anwendungsfall/Anwendungsfall}
-	\caption{Use-Case Diagramm}
+	\caption{Use-Case-Diagramm}
 	\label{fig:anwendungsfall}
 \end{figure}
 \vfill
