--- a/doc/projektplanung.tex
+++ b/doc/projektplanung.tex
@@ -13,7 +13,7 @@ Um das Projekt realisieren zu können, musste sich für einen geeigneten Entwick
 
 \subsection{Projektphasen}
 
-Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügung. Diese Zeit wurde vor Projektbeginn auf verschiedene Phasen verteilt, die während der Durchführung durchlaufen werden. Die grobe Zeitplanung der Hauptphasen lässt sich aus \autoref{fig:grobeZeit} entnehmen. Eine detailierte zeitliche Planung, bei welcher jede Phase in ihre Unterphasen zerlegt wurde, befindet sich im Anhang (XXX)
+Zur Realisierung des Abschlussprojekts standen insgesamt 70 Stunden zur Verfügung. Diese Zeit wurde vor Projektbeginn auf verschiedene Phasen verteilt, die während der Durchführung durchlaufen werden. Diese Zeitplanung der Hauptphasen lässt sich aus \autoref{fig:grobeZeit} entnehmen.
 
 \begin{figure}[H] 
 	\begin{center}
