--- a/doc/entwurfsphase.tex
+++ b/doc/entwurfsphase.tex
@@ -92,7 +92,7 @@ Zentraler Bestandteil des Datenmodells ist das Interface \textbf{INode}. Dieses 
 	\vspace{20px}
 	\centering
 	\includegraphics[width=1\linewidth]{../graphic/diagrams/CD_Baumstruktur_Functions/Baumstruktur}
-	\caption{Klassendiagramm des Datenmodells für Entitäten und Funktionen}
+	\caption{Datenmodell für Entitäten und Funktionen}
 	\label{fig:baumstrukturUML_Func}
 \end{figure}
 
@@ -118,7 +118,7 @@ Auch die Browserergebnisse werden als Baumstruktur gehalten. Allerdings ergiebt 
 	\flushright
 	\includegraphics[width=285px]{../graphic/diagrams/CD_Baumstruktur_Results/Baumstruktur}
 	\captionsetup{width=235px, justification=raggedleft}
-	\caption{Klassendiagramm des Datenmodells für Browsertestergebnisse}
+	\caption{Datenmodell für Browsertestergebnisse}
 	\label{fig:baumstrukturUML_Results}
 \end{figure}
 
@@ -135,7 +135,7 @@ Damit sowohl die Daten der Entitäten und Funktionen als auch die der Browsertes
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=60px]{../graphic/diagrams/CD_IShortcutEditorStore/IShortcutEditorStore}
-	\caption{Klassendiagramm des Datenstores}
+	\caption{Datenstore}
 	\label{fig:ishortcuteditorstore}
 \end{figure}
 
