--- a/doc/implementierung.tex
+++ b/doc/implementierung.tex
@@ -14,6 +14,8 @@ Nachfolgend wir die Implementierung der GUI beschrieben. Da einige Komponenten s
 
 \subsubsection{Accordion}
 
+\subsubsection{ShortcutEditorUI}
+
 \newpage
 
 \subsubsection{Check-Button}
